src/objects/FeeChangeHistory__c.object
<CustomObject>
    <fields>
        <fullName>ChangeInCircumtances_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeInCircumtances Id</label>
        <referenceTo>ChangeInCircumstances__c</referenceTo>
        <relationshipName>FeeChangeHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Name__c</fullName>
        <label>Fee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>FeeChangeHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Amount__c</fullName>
        <label>New Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Amount__c</fullName>
        <label>Previous Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fee Change History</label>
    <nameField>
        <displayFormat>FCH-{0}</displayFormat>
        <label>FeeChangeHistoryId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Change History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>